# kernelgen

./: .cproject  .project  CMakeLists.txt  DiffOutput.sh  LICENSE.TXT  Makefile  Makefile.common  README.md  configure  control  kernelgen.spec  kernelgen.spec.in  kgen.spec  makefile  makefile.in  postinst
behavior/: Makefile  makefile
behavior/argcargv/: main2.c  main3.c  main4.c  main5.c  main6.c  makefile
behavior/hello_c/: Makefile  configure.out  hello_c.reference_output  makefile
behavior/hello_f/: makefile
behavior/privatize/: README  makefile  privatize.c
behavior/sincos/: main.c  makefile  sincos.f90
doc/claim/: claim.tex
doc/stage1/: stage1.tex
doc/user_quickstart/: user_quickstart.tex
patches/: binutils.patch  clang.inline.patch  clang.patch  cloog.checkout.patch  cloog.patch  dragonegg.noalias.patch  dragonegg.patch  dragonegg.ptx.patch  gcc-multiarch.patch  gcc.build.patch  gcc.opencl.patch  gcc.patch  glibc.patch  libelf.patch  llvm.addrspace.patch  llvm.bugpoint.patch  llvm.clang.patch  llvm.gpu.patch  llvm.nvptx.patch  llvm.opts.patch  llvm.ostream.patch  llvm.patch  llvm.polly.patch  llvm.program_prefix.patch  llvm.rand.patch  llvm.scev.patch  llvm.statistic.patch  llvm.transforms.patch  mvapich2.patch  netcdf.patch  nvopencc.patch  openmpi.cuda.patch
patches/dragonegg/: opencl.patch
patches/gcc/: gcc.patch  opencl.patch
patches/llvm/: gpu.patch  inlasm.patch  llvm.patch  varargs.patch
patches/polly/: builtin.patch  cbe.patch
src/: configure  install  kgen  kgen-cpu  kgen-cuda  kgen-exec  kgen-filter-out  kgen-gforscale  kgen-gfortran  kgen-install  kgen-ir  kgen-opencl  kgen-transform  makefile
src/bindings/: cuda.cpp  cuda.h  makefile
src/bugpoint/: TrackedPassManager.cpp  TrackedPassManager.h  makefile
src/buran/: kernelgen-buran
src/clc/: cuda_launch_config.cu  cuda_launch_config.hpp
src/common/: AlignData.cpp  ELF.h  GlobalDependences.cpp  GlobalDependences.h  KernelGen.cpp  KernelGen.h  Settings.cpp  Settings.h  Temp.cpp  Temp.h  Timer.cpp  Timer.h  Verbose.cpp  Verbose.h
src/cuda/: AlignData.cpp  Cubin.cpp  Cubin.h  Cuda.cpp  Cuda.h  DataTypes.cpp  DataTypes.h  GetLoadEffectiveLayout.cpp  GlobalVariables.cpp  GlobalVariables.h  InsertLEPC.cpp  LICENSE  Launch.cpp  Memory.cpp  MergeCubins.cpp  README  ResolveExternalCalls.cpp  RulesDirective.cpp  RulesDirective.h  RulesInstruction.h  RulesModifier.h  RulesOperand.h  SpecificParsers.cpp  SpecificParsers.h  SubString.cpp  SubString.h  asfermi.cpp  asfermi.h  cuda_dyloader.cpp  cuda_dyloader.h  helper.h  libasfermi.cpp  libasfermi.h  loader.h  stdafx.cpp  stdafx.h
src/dragonegg/: kernelgen-dragonegg
src/frontend/: BranchedCodeExtractor.cpp  BranchedCodeExtractor.h  BranchedLoopExtractor.cpp  BranchedLoopExtractor.h  FixPointers.cpp  FixUsingOfMalloc.cpp  FunctionUtils.cpp  GlobalDependences.cpp  LinkFunctionBody.cpp  LinkFunctionBody.h  compile.cpp  execute.c  execute.cpp  execute.h  kernelgen-version.pl  kernelgen.cpp  kernelgen.h  link.cpp  makefile  simple.cpp  tracker.h
src/g95xml_refids/: Makefile  arith.c  array.c  bigint.c  bigreal.c  check.c  data.c  decl.c  dump.c  entry.c  error.c  expr.c  forall.c  format.c  g95.h  imodule.c  interface.c  intrinsic.c  intrinsic.h  io.c  iresolve.c  kinds.c  lang-options.c  match.c  matchexp.c  misc.c  module.c  parse.c  primary.c  resolve.c  scalarize.c  scanner.c  select.c  show.c  simplify.c  st.c  symbol.c  xml-basic.c  xml-bbt.c  xml-cpp.c  (+11 more)
src/g95xml_tree/: Makefile  arith.c  array.c  check.c  decl.c  entry.c  error.c  expr.c  format.c  g95-config.h  g95.h  imodule.c  interface.c  intrinsic.c  intrinsic.h  io.c  iresolve.c  kinds.c  lang-options.c  match.c  matchexp.c  misc.c  module.c  modules.f90  parse.c  primary.c  resolve.c  scalarize.c  scanner.c  show.c  st.c  symbol.c  xml-basic.c  xml-bbt.c  xml-cpp.c  xml-cpp.h  xml-decl-funcs.c  xml-dump-decl.h  xml-dump-source.c  xml-dump.c  (+20 more)
src/gpu/: cuda_dyloader.cpp
src/include/: kernelgen_cuda.bc  kernelgen_cuda.h  kernelgen_interop.h  kernelgen_memory.h  kernelgen_monitor.cu  kernelgen_plugin.h  kernelgen_runtime.cu  kernelgen_runtime.h  makefile  throw.h
src/kgen-embed/: kgen-ir-embed.c  kgen-opencl-embed.c  makefile
src/kgen-opencl-embed/: makefile
src/libasfermi/: RulesDirective.cpp  asfermi.cpp  makefile
src/libgforscale/: build_cpu.c  build_cuda.c  build_opencl.c  compare.c  devaddr_opencl.c  elf_read.c  elf_write.c  error.cpp  gforscale.f90  gforscale_int.h  gforscale_int_opencl.h  init.cpp  init.h  kernelgen.h  kernelgen_int.h  launch.c  launch_cpu.c  launch_cuda.c  launch_opencl.c  load_source.c  makefile  map_cpu.c  map_cuda.c  map_cuda.h  map_opencl.c  merge.cpp  merge_test.c  parse_args.c  parse_args.h  parse_modsyms_cpu.c  parse_modsyms_cuda.c  parse_modsyms_cuda.h  parse_modsyms_opencl.c  reset_cpu.c  reset_cuda.c  reset_opencl.c  timing.c  unmap_cpu.c  unmap_cuda.c  unmap_cuda.h  (+1 more)
src/libkernelgen/: build_cpu.c  build_cuda.c  build_llvm.c  build_opencl.c  compare.c  devaddr_opencl.c  device.c  elf_read_test.c  elf_write_test.c  error.cpp  init.cpp  kernelgen.f90  kernelgen.h  kernelgen_int.h  kernelgen_int_cuda.h  kernelgen_int_opencl.h  launch.c  launch_cpu.c  launch_cuda.c  launch_opencl.c  makefile  map_cpu.c  map_cuda.h  map_opencl.c  merge.cpp  parse_args.c  parse_args.h  parse_modsyms_cuda.c  parse_modsyms_cuda.h  parse_modsyms_opencl.c  reset_cpu.c  reset_cuda.c  reset_opencl.c  stats.cpp  stats.h  timing.c  unmap_cuda.h
src/ocl/: elf_write.c  elf_write.h  elf_write_int.h  makefile  ocl.c
src/options/: gfortran.opts  nvcc.opts
src/plugin/: README  kernelgen-plugin.cpp  makefile  plugin.cpp  test.cpp
src/polly/: kernelgen-polly.cpp
src/runtime/: BlockGenerator.cpp  BranchedCodeExtractor.cpp  ClastExpCodegen.cpp  ClastStmtCodeGen.cpp  CodeGen.cpp  CodeGeneration.cpp  CodeGeneration.h  Compile.cpp  ConstantSubstitution.cpp  Elf.cpp  Elf.h  Entry.cpp  Execute.cpp  Finish.cpp  GlobalDependences.cpp  HostCall.cpp  IO.cpp  IO.h  Launch.cpp  LinkFunctionBody.cpp  Memory.cpp  (+66 more)
tests/: makefile  makefile.in  runtests
tools/: Makefile
(+395 files in other folders)
